Updates from Overleaf

--- a/output/paper/bibliography.bib
+++ b/output/paper/bibliography.bib
@@ -163,3 +163,11 @@
 }
 
 
+@misc{bolin2019scale,
+    title={Scale dependence: Why the average CRPS often is inappropriate for ranking probabilistic forecasts},
+    author={David Bolin and Jonas Wallin},
+    year={2019},
+    eprint={1912.05642},
+    archivePrefix={arXiv},
+    primaryClass={math.ST}
+}
