--- a/output/paper/appendix.tex
+++ b/output/paper/appendix.tex
@@ -1,7 +1,4 @@
-
-
 \section{Model}
-
 \subsection{Notation}
 Before presenting the model we describe some notation used through out the appendix. For a $m \times n$ matrix $r$ we use the following broadcasting notation $\mv{r}_{k,j:l}=[ r_{k,j}, r_{k,j+1}, \ldots, r_{k,l}]$.
 Further $x | y \sim \pi(.)$ implies that the random variable $x$ if we conditioning on $y$ follows distribution $\pi(.)$.
@@ -17,9 +14,11 @@ The relevant variables in the model are the following:
 		$\mv{\beta}$ & $K \times 1$ & Latent prior parameter for $\mv{p}$ \\
 		$\mv{\alpha}^H$ & $2 \times 1$ & parameter for the probability, $\mv{p}$ for holiday adjustment. \\
 		$\mv{\beta}^H$ & $2 \times 1$ & parameter for the probability, $\mv{p}$ for holiday adjustment. \\
-		$\mv{\lambda}$ &  $T \times 1$ &  $\lambda_i$  is the intensity of the expected number of deaths at day $i$. \\
-		$\sigma^2$ & $1\times 1$ & Variation of the random walk prior for the log intensity.
-
+		$\mv{\mu}$ &  $T \times 1$ &  $\mu_i$  is the intensity of the expected number of deaths at day $i$. \\
+		$\sigma^2$ & $1\times 1$ & Variation of the random walk prior for the log intensity. \\
+		$\phi$ & $1\times 1$ & overdispersion parameter for negative binomial distribution. \\
+		$p_0$ & $1\times 1$ & probability of reporting for a low reporting event. \\
+		$pi$ & $1\times 1$ & probability of a low reporting event.
 	\end{tabularx}
 \subsection{likelihood}
 The most complex part of our model is the likelihood, i.e. the density of the observations given the parameters. Here the data consist the daily report of recorded deaths for the past days. This can conveniently be represented upper triangular matrix, $\mv{r}$, where $r_{i,j}$ represents number of new reported deaths for day $i$ reported at day $j$. This matrix is displayed on the left in Table \ref{tab:Data}.
@@ -65,13 +64,13 @@ $$
 \end{cases}
 $$
 These extra parameters are created to account for the under-reporting that occurs during weekend and holidays.
-
+Finally we add an extra mixture component that allows for very low reporting.
 
 \subsection{Priors}
-For the $\mv{\alpha}$ and $\mv{\beta}$ parameters we use an (improper) uniform prior. For the deaths, $\mv{d}$, one could imagine several different prior ideally some sort of epidemiological model. However, here we just assume a log-Gaussian Cox processes \cite{Moller1998_log_gaussian} where the Gaussian processes has a intrinsic random walk distribution \cite{Rue2005_gaussian_markov} i.e.
+For the $\mv{\alpha}$ and $\mv{\beta}$ parameters we use an (improper) uniform prior. For the deaths, $\mv{d}$, one could imagine several different prior ideally some sort of epidemiological model. However, here we just assume a log-Gaussian Cox processes \cite{Moller1998_log_gaussian}, but instead of Poisson distribution we use a negative binomial to handle possible over dispersion. The latent Gaussian processes has a intrinsic random walk distribution \cite{Rue2005_gaussian_markov} i.e.
 \begin{align*}
-\log(\lambda_i) - \log(\lambda_{i-1}) &\sim N(0,\sigma^2),\\
-d_i| \lambda_i  &\sim Po(\lambda_i).
+\log(\mu_i) - \log(\mu_{i-1}) &\sim N(0,\sigma^2),\\
+d_i| \lambda_i  &\sim NegBin(\mu_i, \phi).
 \end{align*}
 This model is created to create a temporal smoothing between the reported deaths.
 For the hyperparameter $\sigma^2$ we impose a inverse Gamma distribution, this prior is suitable here because it guarantees that the process is not constant ($\sigma^2=0$) which we know is not the case.
@@ -79,6 +78,7 @@ For the hyperparameter $\sigma^2$ we impose a inverse Gamma distribution, this p
 Putting the likelihood and priors together we get the following hierarchical Bayesian model
 \begin{align*}
 \sigma^2 &\sim \Gamma(1,0.01) \\
+\phi &\sim \Gamma(1,0.01) \\
 \alpha_k &\sim U[0,\infty] \\
 \beta_k &\sim U[0,\infty] \\
 \alpha_k^H &\sim U[0,\infty] \\
@@ -86,7 +86,7 @@ Putting the likelihood and priors together we get the following hierarchical Bay
 \log(\mu_i) - \log(\mu{i-1}) &\sim N(0,\sigma^2)\\
 d_i| \lambda_i  &\sim NegBin(\mu_i,\phi) \\
 p_{i,j}|  \mv{\alpha},\mv{\beta}, \mv{\alpha}^H,\mv{\beta}^H &\sim Beta(\alpha^H_j\alpha_{min(j-i,k)},\beta^H_j\beta_{min(j-i,k)}) \\
-r_{i,j}|d_i,\mv{r}_{1,1:j},p &\sim Bin(d_i - \sum_{k=1}^{j-1}r_{i,k}, p_{i,j}),
+r_{i,j}|d_i,\mv{r}_{1,1:j},p &\sim \pi Bin(d_i - \sum_{k=1}^{j-1}r_{i,k},p_0)+ (1-\pi) Bin(d_i - \sum_{k=1}^{j-1}r_{i,k}, p_{i,j}),
 \end{align*}
 where where and $j\leq i$ and $i=1,\ldots,T$.
 
@@ -97,7 +97,7 @@ In order to generate samples from this distribution we use a Markov Chain Monte 
 	\item  We sample $\mv{\alpha},\mv{\beta}, \mv{\alpha}^H,\mv{\beta}^H|\mv{d}, \mv{r}$ using the fact that one can integrate out $p$ in the model, and then  $\mv{d}|\mv{\alpha},\mv{\beta}, \mv{\alpha}^H,\mv{\beta}^H,\mv{r},\mv{\lambda}$  follows a Beta-Binomial distribution. Here to we use an adaptive MALA (\cite{Atchade2006_adaptive_version}) to sample from these parameters.
 	\item  To sample $\mv{d}|\mv{\alpha},\mv{\beta}, \mv{\alpha}^H,\mv{\beta}^H,\mv{r},\mv{\lambda}$, that each death, $d_i$ is conditionally independent, and we just use a Metropolis Hastings random walk to sample each one.
 	\item To sample $\mv{\lambda} | \mv{d},\sigma^2$ we again use an adaptive MALA.
-	\item Finally we sample $\sigma^2|\mv{d}$ directly since this distribution is explicit.
+	\item Finally We sample $\sigma^2|\mv{d}$,and  $p_0,\pi$ directly since this distribution is explicit, and $\phi$ using a MH-RW.
 \end{itemize}
 
 \section{Model Benchmark}
@@ -122,22 +122,13 @@ As confidence interval we simply use a Normal assumption with standard deviation
 \begin{figure}
     \centering
     \includegraphics[width=0.9\textwidth]{../plots/SCRPS_over_states}
-    \caption{}
+    \caption{Average SCRPS as the pandemic progresses.}
     \label{fig:SCRPS_states}
 \end{figure}
 
 \begin{figure}
     \centering
     \includegraphics[width=0.9\textwidth]{../plots/SCRPS_over_weekdays}
-    \caption{Model accuracy over time for four dates, compared to a benchmark}
+    \caption{Average SCRPS per weekday.}
     \label{fig:SCRPS_weekdays}
 \end{figure}
-
-
-% TODO: Add figures
-
-% \bibliographystyle{chicago}
-% \bibliography{researchplan}
-% \end{document}
-
-
