--- a/output/paper/bibliography.bib
+++ b/output/paper/bibliography.bib
@@ -3,7 +3,6 @@
   title = {How Will Country-Based Mitigation Measures Influence the Course of the {{COVID}}-19 Epidemic?},
   author = {Anderson, Roy M. and Heesterbeek, Hans and Klinkenberg, Don and Hollingsworth, T. D{\'e}irdre},
   year = {2020},
-  month = mar,
   volume = {395},
   pages = {931--934},
   publisher = {{Elsevier}},
@@ -14,159 +13,150 @@
   number = {10228},
   pmid = {32164834}
 }
-
 @article{Atchade2006_adaptive_version,
-  title = {An {{Adaptive Version}} for the {{Metropolis Adjusted Langevin Algorithm}} with a {{Truncated Drift}}},
-  author = {Atchad{\'e}, Yves F.},
-  year = {2006},
-  month = jun,
-  volume = {8},
-  pages = {235--254},
-  issn = {1573-7713},
-  doi = {10.1007/s11009-006-8550-0},
-  journal = {Methodology and Computing in Applied Probability},
-  language = {en},
-  number = {2}
+	title = {An {{Adaptive Version}} for the {{Metropolis Adjusted Langevin Algorithm}} with a {{Truncated Drift}}},
+	author = {Atchad{\'e}, Yves F.},
+	year = {2006},
+	volume = {8},
+	pages = {235--254},
+	issn = {1573-7713},
+	doi = {10.1007/s11009-006-8550-0},
+	journal = {Methodology and Computing in Applied Probability},
+	language = {en},
+	number = {2}
 }
-
 @book{Brooks2011_handbook_markov,
-  title = {Handbook of {{Markov Chain Monte Carlo}}},
-  author = {Brooks, Steve and Gelman, Andrew and Jones, Galin and Meng, Xiao-Li},
-  year = {2011},
-  month = may,
-  publisher = {{CRC Press}},
-  googlebooks = {qfRsAIKZ4rIC},
-  isbn = {978-1-4200-7942-5},
-  language = {en}
+	title = {Handbook of {{Markov Chain Monte Carlo}}},
+	author = {Brooks, Steve and Gelman, Andrew and Jones, Galin and Meng, Xiao-Li},
+	year = {2011},
+	publisher = {{CRC Press}},
+	googlebooks = {qfRsAIKZ4rIC},
+	isbn = {978-1-4200-7942-5},
+	language = {en}
 }
 
 @article{Jajosky2004_evaluation_reporting,
-  title = {Evaluation of Reporting Timeliness of Public Health Surveillance Systems for Infectious Diseases},
-  author = {Jajosky, Ruth Ann and Groseclose, Samuel L.},
-  year = {2004},
-  month = jul,
-  volume = {4},
-  pages = {29},
-  issn = {1471-2458},
-  doi = {10.1186/1471-2458-4-29},
-  journal = {BMC Public Health},
-  number = {1}
+	title = {Evaluation of Reporting Timeliness of Public Health Surveillance Systems for Infectious Diseases},
+	author = {Jajosky, Ruth Ann and Groseclose, Samuel L.},
+	year = {2004},
+	volume = {4},
+	pages = {29},
+	issn = {1471-2458},
+	doi = {10.1186/1471-2458-4-29},
+	journal = {BMC Public Health},
+	number = {1}
 }
 
 @article{Leslie1939_attempt_determine,
-  title = {An {{Attempt}} to {{Determine}} the {{Absolute Number}} of {{Rats}} on a {{Given Area}}},
-  author = {Leslie, P. H. and Davis, D. H. S.},
-  year = {1939},
-  volume = {8},
-  pages = {94--113},
-  publisher = {{[Wiley, British Ecological Society]}},
-  issn = {0021-8790},
-  doi = {10.2307/1255},
-  journal = {Journal of Animal Ecology},
-  number = {1}
+	title = {An {{Attempt}} to {{Determine}} the {{Absolute Number}} of {{Rats}} on a {{Given Area}}},
+	author = {Leslie, P. H. and Davis, D. H. S.},
+	year = {1939},
+	volume = {8},
+	pages = {94--113},
+	publisher = {{[Wiley, British Ecological Society]}},
+	issn = {0021-8790},
+	doi = {10.2307/1255},
+	journal = {Journal of Animal Ecology},
+	number = {1}
 }
 
+
 @article{Matechou2016_open_models,
-  title = {Open Models for Removal Data},
-  author = {Matechou, Eleni and McCrea, Rachel S. and Morgan, Byron J. T. and Nash, Darryn J. and Griffiths, Richard A.},
-  year = {2016},
-  month = sep,
-  volume = {10},
-  pages = {1572--1589},
-  publisher = {{Institute of Mathematical Statistics}},
-  issn = {1932-6157, 1941-7330},
-  doi = {10.1214/16-AOAS949},
-  journal = {Annals of Applied Statistics},
-  language = {EN},
-  mrnumber = {MR3553236},
-  number = {3},
-  zmnumber = {06775278}
+	title = {Open Models for Removal Data},
+	author = {Matechou, Eleni and McCrea, Rachel S. and Morgan, Byron J. T. and Nash, Darryn J. and Griffiths, Richard A.},
+	year = {2016},
+	volume = {10},
+	pages = {1572--1589},
+	publisher = {{Institute of Mathematical Statistics}},
+	issn = {1932-6157, 1941-7330},
+	doi = {10.1214/16-AOAS949},
+	journal = {Annals of Applied Statistics},
+	language = {EN},
+	mrnumber = {MR3553236},
+	number = {3},
+	zmnumber = {06775278}
 }
 
 @article{Moller1998_log_gaussian,
-  title = {Log {{Gaussian Cox Processes}}},
-  author = {M\o ller, Jesper and Syversveen, Anne Randi and Waagepetersen, Rasmus Plenge},
-  year = {1998},
-  volume = {25},
-  pages = {451--482},
-  issn = {1467-9469},
-  doi = {10.1111/1467-9469.00115},
-  copyright = {Board of the Foundation of the Scandinavian Journal of Statistics 1998},
-  journal = {Scandinavian Journal of Statistics},
-  language = {en},
-  number = {3}
+	title = {Log {{Gaussian Cox Processes}}},
+	author = {M{\o}ller, Jesper and Syversveen, Anne Randi and Waagepetersen, Rasmus Plenge},
+	year = {1998},
+	volume = {25},
+	pages = {451--482},
+	issn = {1467-9469},
+	doi = {10.1111/1467-9469.00115},
+	copyright = {Board of the Foundation of the Scandinavian Journal of Statistics 1998},
+	journal = {Scandinavian Journal of Statistics},
+	language = {en},
+	number = {3}
 }
 
+
 @article{Moran1951_mathematical_theory,
-  title = {A {{Mathematical Theory}} of {{Animal Trapping}}},
-  author = {Moran, P. A. P.},
-  year = {1951},
-  volume = {38},
-  pages = {307--311},
-  publisher = {{[Oxford University Press, Biometrika Trust]}},
-  issn = {0006-3444},
-  doi = {10.2307/2332576},
-  journal = {Biometrika},
-  number = {3/4}
+	title = {A {{Mathematical Theory}} of {{Animal Trapping}}},
+	author = {Moran, P. A. P.},
+	year = {1951},
+	volume = {38},
+	pages = {307--311},
+	publisher = {{[Oxford University Press, Biometrika Trust]}},
+	issn = {0006-3444},
+	doi = {10.2307/2332576},
+	journal = {Biometrika},
+	number = {3/4}
 }
 
 @article{No_author_2020_coronavirus_three,
-  title = {Coronavirus: Three Things All Governments and Their Science Advisers Must Do Now},
-  shorttitle = {Coronavirus},
-  year = {2020},
-  month = mar,
-  volume = {579},
-  pages = {319--320},
-  publisher = {{Nature Publishing Group}},
-  doi = {10.1038/d41586-020-00772-4},
-  copyright = {2020 Nature},
-  journal = {Nature},
-  language = {en},
-  number = {7799}
+	author = {Nature},
+title = {Coronavirus: Three Things All Governments and Their Science Advisers Must Do Now},
+shorttitle = {Coronavirus},
+year = {2020},
+volume = {579},
+pages = {319--320},
+publisher = {{Nature Publishing Group}},
+doi = {10.1038/d41586-020-00772-4},
+copyright = {2020 Nature},
+journal = {Nature},
+language = {en},
+number = {7799}
 }
 
 @article{Ohman2020_antalet_virusdoda,
-  title = {{Antalet virusd\"oda har underskattats}},
-  author = {{\"O}hman, Daniel and Gagliano, Alexander},
-  year = {2020},
-  month = apr,
-  chapter = {Nyheter (Ekot)},
-  journal = {Sveriges Radio},
-  language = {sv}
+	title = {Antalet virusd\"oda har underskattats},
+	author = {{\"O}hman, Daniel and Gagliano, Alexander},
+	year = {2020},
+	journal = {Sveriges Radio},
+	language = {sv}
 }
-
 @article{Pollock1991_review_papers,
-  title = {Review {{Papers}}: {{Modeling Capture}}, {{Recapture}}, and {{Removal Statistics}} for {{Estimation}} of {{Demographic Parameters}} for {{Fish}} and {{Wildlife Populations}}: {{Past}}, {{Present}}, and {{Future}}},
-  shorttitle = {Review {{Papers}}},
-  author = {Pollock, Kenneth H.},
-  year = {1991},
-  month = mar,
-  volume = {86},
-  pages = {225--238},
-  publisher = {{Taylor \& Francis}},
-  issn = {0162-1459},
-  doi = {10.1080/01621459.1991.10475022},
-  journal = {Journal of the American Statistical Association},
-  number = {413}
+	title = {Review {{Papers}}: {{Modeling Capture}}, {{Recapture}}, and {{Removal Statistics}} for {{Estimation}} of {{Demographic Parameters}} for {{Fish}} and {{Wildlife Populations}}: {{Past}}, {{Present}}, and {{Future}}},
+	shorttitle = {Review {{Papers}}},
+	author = {Pollock, Kenneth H.},
+	year = {1991},
+	volume = {86},
+	pages = {225--238},
+	publisher = {{Taylor \& Francis}},
+	issn = {0162-1459},
+	doi = {10.1080/01621459.1991.10475022},
+	journal = {Journal of the American Statistical Association},
+	number = {413}
 }
 
 @book{Rue2005_gaussian_markov,
-  title = {Gaussian {{Markov Random Fields}}: {{Theory}} and {{Applications}}},
-  shorttitle = {Gaussian {{Markov Random Fields}}},
-  author = {Rue, Havard and Held, Leonhard},
-  year = {2005},
-  month = feb,
-  publisher = {{CRC Press}},
-  isbn = {978-0-203-49202-4},
-  language = {en}
+	title = {Gaussian {{Markov Random Fields}}: {{Theory}} and {{Applications}}},
+	shorttitle = {Gaussian {{Markov Random Fields}}},
+	author = {Rue, Havard and Held, Leonhard},
+	year = {2005},
+	publisher = {{CRC Press}},
+	isbn = {978-0-203-49202-4},
+	language = {en}
 }
 
 
 @misc{bolin2019scale,
-    title={Scale dependence: Why the average CRPS often is inappropriate for ranking probabilistic forecasts},
-    author={David Bolin and Jonas Wallin},
-    year={2019},
-    eprint={1912.05642},
-    archivePrefix={arXiv},
-    primaryClass={math.ST}
+	title={Scale dependence: Why the average CRPS often is inappropriate for ranking probabilistic forecasts},
+	author={David Bolin and Jonas Wallin},
+	year={2019},
+	eprint={1912.05642},
+	archivePrefix={arXiv},
+	primaryClass={math.ST}
 }
