--- a/output/paper/paper.tex
+++ b/output/paper/paper.tex
@@ -1,10 +1,10 @@
-\documentclass[a4paper,11pth,american]{article}
+\documentclass[a4paper,11pth]{article}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
-\usepackage{babel}
-\usepackage[protrusion=true,expansion=true,final,babel]{microtype}
-\usepackage[babel]{csquotes}
-\usepackage{babel}
+%\usepackage{babel}
+%\usepackage[protrusion=true,expansion=true,final,babel]{microtype}
+%\usepackage[babel]{csquotes}
+%\usepackage{babel}
 \usepackage{natbib}
 \usepackage{amsmath,amssymb,amsfonts,amsthm}
 \usepackage{booktabs}
@@ -35,25 +35,25 @@
 %%%%%%%%%%%%%%%%%%%
 % MAIN TEXT SECTION
 \section{Pandemic response demands timely data}
-The new corona virus pandemic is affecting societies all around the world. As countries are challenged to control and fight back, they are in need of timely, unbiased, data for monitoring trends and making fast and well-informed decisions (\cite{No_author_2020_coronavirus_three}). Official statistics are usually reported with long delay after thorough verification, but in the midst of a deadly pandemic, real time data is of critical importance for policymakers (\cite{Jajosky2004_evaluation_reporting}). The latest data are often not finalized, but change as new information is reported. In fact, reporting delays make the most recent days have the least cases accounted for, producing a dangerous illusion of an always improving outlook.
+The new corona virus pandemic is affecting societies all around the world. As countries are challenged to control and fight back, they are in need of timely, unbiased, data for monitoring trends and making fast and well-informed decisions \citep{No_author_2020_coronavirus_three}. Official statistics are usually reported with long delay after thorough verification, but in the midst of a deadly pandemic, real time data is of critical importance for policymakers \citep{Jajosky2004_evaluation_reporting}. The latest data are often not finalized, but change as new information is reported. In fact, reporting delays make the most recent days have the least cases accounted for, producing a dangerous illusion of an always improving outlook.
 
 Still, these unfinished statistics offer crucial information. If the pandemic is indeed slowing, we should not wait for the data to be finalized before using it. Rather, we argue that actual case counts and deaths should be nowcasted to account for reporting delay, thus allowing policymakers to use the latest numbers availiable without beinig misled by reporting bias.
 
 Such predictions provide an additional feature that is perhaps even more important. They explicitly model the uncertainty about these unknown quantities, ensuring that all users of these data have the same view of the current state of the epidemic.
 
-In this paper we describe a statistical methodology for nowcasting the epidemic statistics, such as hospitalizations or deaths, and their degrees of uncertainty, based on the daily reported event frequency and the observed distribution pattern of reporting delays. The prediction model is building on methods developed in ecology, referred to as the ``removal method'' (\cite{Pollock1991_review_papers}).
+In this paper we describe a statistical methodology for nowcasting the epidemic statistics, such as hospitalizations or deaths, and their degrees of uncertainty, based on the daily reported event frequency and the observed distribution pattern of reporting delays. The prediction model is building on methods developed in ecology, referred to as the ``removal method'' \citep{Pollock1991_review_papers}.
 
 To help motivate why such forecasting is needed, we now turn to the case of Sweden. The model is flexible by design, however, and could easily be applied to other countries as well.
 
 \subsection{The current situation of COVID-19 in Sweden}
-The Swedish Public Health Agency updates the COVID-19 statistics daily\footnote{The data is published on \url{https://www.folkhalsomyndigheten.se/smittskydd-beredskap/utbrott/aktuella-utbrott/covid-19/bekraftade-fall-i-sverige/}.}. During a press conference, they present updates on the number of deaths, admissions to hosiptals and intensive care, as well as case counts.
+The Swedish Public Health Agency updates the COVID-19 statistics daily\footnote{The data is published on \url{https://www.folkhalsomyndigheten.se/smittskydd-beredskap/utbrott/aktuella-utbrott/covid-19/bekraftade-fall-i-sverige/}.}. During a press conference, they present updates on the number of deaths, admissions to hospitals and intensive care, as well as case counts.
 
-One of the reasons for following these indicators is to enable public health professionals and the public to observe the evolving patterns of the epidemic (\cite{Anderson2020_how_will}). In relation to policy, it is of specific interest to understand if the growth rates changes, which could indicate the need for a policy response. However, in each daily report only a proportion of the number of recent deaths is yet known, and this bias produces the illusion of a downward trend.
+One of the reasons for following these indicators is to enable public health professionals and the public to observe the evolving patterns of the epidemic \citep{Anderson2020_how_will}. In relation to policy, it is of specific interest to understand if the growth rates changes, which could indicate the need for a policy response. However, in each daily report only a proportion of the number of recent deaths is yet known, and this bias produces the illusion of a downward trend.
 
-The death counts suffer from the longest reporting delay. In their daily press conference, the Swedish Public Health Agency warns for this by stopping the reported 7-day moving average trend line 10 days before the latest date. But not only are deaths often reported far further back than 10 days, a bar plot still shows the latest information, creating a sense of a downward trend. In fact, this might be the reason why the number of daily deaths have been underestimated repeatedly. At the peak, deaths were initially believed to level out at around 60 per day, but after all cases had been reported more than two weeks later, the actual number was close to 120 (\cite{Ohman2020_antalet_virusdoda}).
+The death counts suffer from the longest reporting delay. In their daily press conference, the Swedish Public Health Agency warns for this by stopping the reported 7-day moving average trend line 10 days before the latest date. But not only are deaths often reported far further back than 10 days, a bar plot still shows the latest information, creating a sense of a downward trend. In fact, this might be the reason why the number of daily deaths have been underestimated repeatedly. At the peak, deaths were initially believed to level out at around 60 per day, but after all cases had been reported more than two weeks later, the actual number was close to 120 \citep{Ohman2020_antalet_virusdoda}.
 
 \section{The removal method}
-We propose to use the removal method, developed in animal management (\cite{Pollock1991_review_papers}), to present an estimate of the actual frequencies at a given day and their uncertainty. The method has a long history dating back at least to the 1930s (\cite{Leslie1939_attempt_determine}). However, the first refined mathematical treatment of the method is credited to \cite{Moran1951_mathematical_theory}, more modern derivatives exits today (\cite{Matechou2016_open_models}). It is a commonly applied method today when analyzing age cohorts in fishery and wildlife management.
+We propose to use the removal method, developed in animal management \citep{Pollock1991_review_papers}, to present an estimate of the actual frequencies at a given day and their uncertainty. The method has a long history dating back at least to the 1930s \citep{Leslie1939_attempt_determine}. However, the first refined mathematical treatment of the method is credited to \citet{Moran1951_mathematical_theory}, more modern derivatives exits today \citep{Matechou2016_open_models}. It is a commonly applied method today when analyzing age cohorts in fishery and wildlife management.
 
 The removal method that has three major advantages over simply reporting moving averages:
 
@@ -63,7 +63,7 @@ The removal method that has three major advantages over simply reporting moving 
 	\item the uncertainty estimates can be carried over to epidemiological models to help create more realistic models.
 \end{itemize}
 
-A classic example where the method proposed to solve this problem has been used is in estimating statistics of trapping a closed population of animals (\cite{Pollock1991_review_papers}). Each day the trapped animals are collected, and kept, and if there is no immigration the number of trapped animals the following days will, on average, decline. This pattern of declining number of trapped animals allows one to draw inference of the underlying population size. Here we replace the animal population with the true number of deaths
+A classic example where the method proposed to solve this problem has been used is in estimating statistics of trapping a closed population of animals \citep{Pollock1991_review_papers}. Each day the trapped animals are collected, and kept, and if there is no immigration the number of trapped animals the following days will, on average, decline. This pattern of declining number of trapped animals allows one to draw inference of the underlying population size. Here we replace the animal population with the true number of deaths
 on a given day. Instead of traps we have the new reports of COVID--19 events. As the number of new reported deaths for a given day declines, we can draw inference on how many actually died that day. If we assume that the reporting structure is constant over time we can after a while quickly get good estimate of the actual number.
 
 Suppose for example that on day one, 4 individuals are reported dead for that day. On the second day, 10 deaths are recorded for day two. Then, with no further information, it is reasonable to assume that more people died on day two. If the proportion reported on the first day is 3\%, the actual number of deaths would be 133 for day one and 333 for day two.
@@ -75,7 +75,7 @@ We propose a Bayesian version of the removal model that assumes an overdispersed
 
 To get accurate estimates we apply two institution-specific corrections. First, we only count workdays as constituting reporting delay, as very few deaths are reported during weekends. Second, we apply a constant bias correction to account for the fact that Swedish deaths come from two distinct populations with different trends: deaths in hospitals, and in elderly care.
 
-In Figure~\ref{fig:latest_prediction} we apply the model to the latest statistics from Sweden. The graph shows reported and predicted deaths (with uncertainty intervals) as bars, and a dashed line plots the 7-day (centered) moving average. A version without predictions is used in the Public Health Agency´s daily press briefings. As expected, the model provides estimates of actual deaths considerably above the reported number of deaths. Not how the model predicts additional deaths above the moving average line.
+In Figure~\ref{fig:latest_prediction} we apply the model to the latest statistics from Sweden. The graph shows reported and predicted deaths (with uncertainty intervals) as bars, and a dashed line plots the 7-day (centered) moving average. A version without predictions is used in the Public Health Agency\'s daily press briefings. As expected, the model provides estimates of actual deaths considerably above the reported number of deaths. Not how the model predicts additional deaths above the moving average line.
 
 \begin{figure}
     \centering
@@ -96,7 +96,7 @@ Figure~\ref{fig:four_dates} depicts four randomly chosen dates where the model i
     \label{fig:four_dates}
 \end{figure}
 
-Figure~\ref{fig:model_metrics} shows model performance compared to the benchmark for three difference performance metrics. All three graphs are based on predictions of reported deaths within 14 days, and show how performance increases as more data has been reported. Each data point is the average of all dates where predictions can be evaluated. SCRPS is a measure of accuracy that rewards precision, it is a proper scoring rule like the continuous probability rank score or the Brier score (see definition in Appendix) \cite{bolin2019scale}. The central plot shows the width of the prediction intervals, and the rightmost one the proportion of PI´s that cover the true value.
+Figure~\ref{fig:model_metrics} shows model performance compared to the benchmark for three difference performance metrics. All three graphs are based on predictions of reported deaths within 14 days, and show how performance increases as more data has been reported. Each data point is the average of all dates where predictions can be evaluated. SCRPS is a measure of accuracy that rewards precision, it is a proper scoring rule like the continuous probability rank score or the Brier score (see definition in Appendix) \citep{bolin2019scale}. The central plot shows the width of the prediction intervals, and the rightmost one the proportion of PI\'s that cover the true value.
 
 Benchmark and model point estimates are similarly close to the truth. The model produces tighter prediction intervals. For 8-5 days of reporting lag (see Figure \ref{fig:model_metrics}), the intervals are too tight. This is likely because the Public Health Agency queries the Swedish death registry for Covid-19 deaths only once or twice a week. Since we do not know the process, it has not been explicitly modeled.
 
