--- a/output/paper/appendix.tex
+++ b/output/paper/appendix.tex
@@ -1,3 +1,6 @@
+\renewcommand{\thefigure}{A\arabic{figure}}
+\setcounter{figure}{0}   
+
 \section{Model}
 \subsection{Notation}
 Before presenting the model we describe some notation used through out the appendix. For a $m \times n$ matrix $r$ we use the following broadcasting notation $\mv{r}_{k,j:l}=[ r_{k,j}, r_{k,j+1}, \ldots, r_{k,l}]$.
@@ -70,7 +73,7 @@ Finally we add an extra mixture component that allows for very low reporting.
 For the $\mv{\alpha}$ and $\mv{\beta}$ parameters we use an (improper) uniform prior. For the deaths, $\mv{d}$, one could imagine several different prior ideally some sort of epidemiological model. However, here we just assume a log-Gaussian Cox processes \citep{Moller1998_log_gaussian}, but instead of Poisson distribution we use a negative binomial to handle possible over dispersion. The latent Gaussian processes has a intrinsic random walk distribution \citep{Rue2005_gaussian_markov} i.e.
 \begin{align*}
 \log(\mu_i) - \log(\mu_{i-1}) &\sim N(0,\sigma^2),\\
-d_i| \lambda_i  &\sim NegBin(\mu_i, \phi).
+d_i| \phi, \mu_i  &\sim NegBin(\mu_i, \phi).
 \end{align*}
 This model is created to create a temporal smoothing between the reported deaths.
 For the hyperparameter $\sigma^2$ we impose a inverse Gamma distribution, this prior is suitable here because it guarantees that the process is not constant ($\sigma^2=0$) which we know is not the case.
@@ -83,8 +86,8 @@ Putting the likelihood and priors together we get the following hierarchical Bay
 \beta_k &\sim U[0,\infty] \\
 \alpha_k^H &\sim U[0,\infty] \\
 \beta_k^H &\sim U[0,\infty] \\
-\log(\mu_i) - \log(\mu{i-1}) &\sim N(0,\sigma^2)\\
-d_i| \lambda_i  &\sim NegBin(\mu_i,\phi) \\
+\log(\mu_i) - \log(\mu_{i-1}) &\sim N(0,\sigma^2)\\
+d_i| \phi,\mu_i  &\sim NegBin(\mu_i,\phi) \\
 p_{i,j}|  \mv{\alpha},\mv{\beta}, \mv{\alpha}^H,\mv{\beta}^H &\sim Beta(\alpha^H_j\alpha_{min(j-i,k)},\beta^H_j\beta_{min(j-i,k)}) \\
 r_{i,j}|d_i,\mv{r}_{1,1:j},p &\sim \pi Bin(d_i - \sum_{k=1}^{j-1}r_{i,k},p_0)+ (1-\pi) Bin(d_i - \sum_{k=1}^{j-1}r_{i,k}, p_{i,j}),
 \end{align*}
@@ -94,9 +97,9 @@ where where and $j\leq i$ and $i=1,\ldots,T$.
 As the main goal to generate inference of the number of death $\mv{d}$ is through the posterior distribution of number of deaths $\mv{d}$ given the observations $\mv{r}$.
 In order to generate samples from this distribution we use a Markov Chain Monte Carlo method \citep{Brooks2011_handbook_markov}. In more detail we use a blocked Gibbs sampler, which generates samples in the following sequence:
 \begin{itemize}
-	\item  We sample $\mv{\alpha},\mv{\beta}, \mv{\alpha}^H,\mv{\beta}^H|\mv{d}, \mv{r}$ using the fact that one can integrate out $p$ in the model, and then  $\mv{d}|\mv{\alpha},\mv{\beta}, \mv{\alpha}^H,\mv{\beta}^H,\mv{r},\mv{\lambda}$  follows a Beta-Binomial distribution. Here to we use an adaptive MALA \citep{Atchade2006_adaptive_version} to sample from these parameters.
-	\item  To sample $\mv{d}|\mv{\alpha},\mv{\beta}, \mv{\alpha}^H,\mv{\beta}^H,\mv{r},\mv{\lambda}$, that each death, $d_i$ is conditionally independent, and we just use a Metropolis Hastings random walk to sample each one.
-	\item To sample $\mv{\lambda} | \mv{d},\sigma^2$ we again use an adaptive MALA.
+	\item  We sample $\mv{\alpha},\mv{\beta}, \mv{\alpha}^H,\mv{\beta}^H|\mv{d}, \mv{r}$ using the fact that one can integrate out $p$ in the model, and then  $\mv{d}|\mv{\alpha},\mv{\beta}, \mv{\alpha}^H,\mv{\beta}^H,\mv{r},\mv{\mu},\phi$  follows a Beta-Binomial distribution. Here to we use an adaptive MALA \citep{Atchade2006_adaptive_version} to sample from these parameters.
+	\item  To sample $\mv{d}|\mv{\alpha},\mv{\beta}, \mv{\alpha}^H,\mv{\beta}^H,\mv{r},\mv{\mu},\phi$, that each death, $d_i$ is conditionally independent, and we just use a Metropolis Hastings random walk to sample each one.
+	\item To sample $\mv{\mu} | \mv{d},\sigma^2,\phi$ we again use an adaptive MALA.
 	\item Finally We sample $\sigma^2|\mv{d}$,and  $p_0,\pi$ directly since this distribution is explicit, and $\phi$ using a MH-RW.
 \end{itemize}
 
