Updates from Overleaf

--- a/output/paper/paper.tex
+++ b/output/paper/paper.tex
@@ -14,6 +14,7 @@
 \usepackage{multirow}
 \usepackage{tabularx}
 \usepackage{hyperref}
+\usepackage{caption}
 \newcolumntype{L}{>{\raggedright\arraybackslash}X}
 \newcommand{\mv}[1]{{\boldsymbol{#1}}}
 
