Updates from Overleaf

--- a/output/paper/paper.tex
+++ b/output/paper/paper.tex
@@ -14,7 +14,6 @@
 \usepackage{multirow}
 \usepackage{tabularx}
 \usepackage{hyperref}
-\usepackage{caption}
 \newcolumntype{L}{>{\raggedright\arraybackslash}X}
 \newcommand{\mv}[1]{{\boldsymbol{#1}}}
 
@@ -80,7 +79,7 @@ In Figure~\ref{fig:latest_prediction} we apply the model to the latest statistic
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.9\textwidth]{plots/latest_prediction}
+    \includegraphics[width=0.9\textwidth]{plots/latest_prediction_SWE}
     \caption{Swedish Covid-19 deaths as of 2020-06-04 and model predictions}
     \label{fig:latest_prediction}
 \end{figure}
