Updates from Overleaf

--- a/output/paper/paper.tex
+++ b/output/paper/paper.tex
@@ -79,7 +79,7 @@ In Figure~\ref{fig:latest_prediction} we apply the model to the latest statistic
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.9\textwidth]{plots/latest_prediction_SWE}
+    \includegraphics[width=0.95\textwidth]{plots/latest_prediction}
     \caption{Swedish Covid-19 deaths as of 2020-06-04 and model predictions}
     \label{fig:latest_prediction}
 \end{figure}
